--- a/HomeWork 2.3.1/Storyboards/Base.lproj/Main.storyboard
+++ b/HomeWork 2.3.1/Storyboards/Base.lproj/Main.storyboard
@@ -50,16 +50,16 @@
                                         <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                         <state key="normal" title="Forgot User Name?"/>
                                         <connections>
-                                            <action selector="forgotButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="DcS-bP-LAC"/>
+                                            <action selector="forgotButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="e3F-1u-c6N"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="trailing" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wex-FJ-ZWs">
+                                    <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="trailing" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wex-FJ-ZWs">
                                         <rect key="frame" x="131" y="0.0" width="109" height="28"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                         <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                         <state key="normal" title="Forgot Password?"/>
                                         <connections>
-                                            <action selector="forgotButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="iie-vS-Zhs"/>
+                                            <action selector="forgotButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="JdN-I5-iHs"/>
                                         </connections>
                                     </button>
                                 </subviews>
@@ -80,7 +80,6 @@
                     </view>
                     <navigationItem key="navigationItem" id="VoQ-Vj-JO3"/>
                     <connections>
-                        <outlet property="forgotUserNameButton" destination="gGX-xS-I6n" id="98f-7Q-zCL"/>
                         <outlet property="logInButton" destination="1hR-Wo-NHH" id="YEq-bH-mDz"/>
                         <outlet property="passwordTextField" destination="6Ry-Tk-fNE" id="9OL-wh-rS5"/>
                         <outlet property="userNameTextField" destination="vrJ-7w-dAU" id="DD6-h1-BY3"/>
@@ -99,7 +98,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Welcome !" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="Xdy-LD-4Xi">
-                                <rect key="frame" x="90" y="136" width="140" height="33.5"/>
+                                <rect key="frame" x="96.5" y="136" width="127" height="33.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="28"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
@@ -127,9 +126,8 @@
                         <color key="tintColor" red="0.24644226020000001" green="0.57434607800000004" blue="0.86078917980000003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
                             <constraint firstItem="zJH-1q-dBM" firstAttribute="centerX" secondItem="zkt-kx-lM2" secondAttribute="centerX" id="Ads-br-EfB"/>
-                            <constraint firstItem="zkt-kx-lM2" firstAttribute="trailing" secondItem="Xdy-LD-4Xi" secondAttribute="trailing" constant="90" id="ERU-MV-3tj"/>
-                            <constraint firstItem="Xdy-LD-4Xi" firstAttribute="leading" secondItem="zkt-kx-lM2" secondAttribute="leading" constant="90" id="R7n-cU-kIt"/>
                             <constraint firstItem="Xdy-LD-4Xi" firstAttribute="top" secondItem="zkt-kx-lM2" secondAttribute="top" constant="136" id="Ugw-5c-IDB"/>
+                            <constraint firstItem="Xdy-LD-4Xi" firstAttribute="centerX" secondItem="zkt-kx-lM2" secondAttribute="centerX" id="gSe-u8-GuF"/>
                             <constraint firstItem="zkt-kx-lM2" firstAttribute="bottom" secondItem="zJH-1q-dBM" secondAttribute="bottom" constant="150" id="tSu-PY-RAL"/>
                             <constraint firstItem="RyU-oU-6xg" firstAttribute="top" secondItem="Xdy-LD-4Xi" secondAttribute="bottom" constant="48.5" id="wvn-gu-Q1M"/>
                             <constraint firstItem="RyU-oU-6xg" firstAttribute="centerX" secondItem="Xdy-LD-4Xi" secondAttribute="centerX" id="zWm-Ot-jq1"/>
@@ -138,7 +136,6 @@
                     <tabBarItem key="tabBarItem" title="Home" image="person.fill" catalog="system" id="R3U-J0-M4K"/>
                     <navigationItem key="navigationItem" id="jHk-2U-GIi"/>
                     <connections>
-                        <outlet property="backNavigationItem" destination="jHk-2U-GIi" id="zyB-aG-6sj"/>
                         <outlet property="emojiLabel" destination="RyU-oU-6xg" id="tNB-Rh-OzS"/>
                         <outlet property="welcomeLabel" destination="Xdy-LD-4Xi" id="L9E-Ct-PSN"/>
                     </connections>
@@ -186,29 +183,20 @@
                                 </subviews>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="14" translatesAutoresizingMaskIntoConstraints="NO" id="ufz-ur-F7H">
-                                <rect key="frame" x="136" y="64" width="100" height="130"/>
+                                <rect key="frame" x="136" y="64" width="168" height="130"/>
                                 <subviews>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Полное Имя" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0r6-1q-Qhi">
-                                        <rect key="frame" x="0.0" y="0.0" width="100" height="34"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="100" id="m92-XW-bbX"/>
-                                        </constraints>
+                                        <rect key="frame" x="0.0" y="0.0" width="168" height="34"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Возраст" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="dnD-5t-EH3">
-                                        <rect key="frame" x="0.0" y="48" width="100" height="34"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="100" id="ISb-Pd-GyR"/>
-                                        </constraints>
+                                        <rect key="frame" x="0.0" y="48" width="168" height="34"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Работа" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="xTr-i8-qe1">
-                                        <rect key="frame" x="0.0" y="96" width="100" height="34"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="100" id="qO0-We-ORy"/>
-                                        </constraints>
+                                        <rect key="frame" x="0.0" y="96" width="168" height="34"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
@@ -227,10 +215,11 @@
                     </view>
                     <navigationItem key="navigationItem" title="User Name" id="aww-NS-j1G">
                         <barButtonItem key="backBarButtonItem" title="Back" id="q02-rH-5Fv"/>
-                        <barButtonItem key="rightBarButtonItem" style="plain" id="QyQ-jK-IuN">
+                        <barButtonItem key="rightBarButtonItem" id="QyQ-jK-IuN">
                             <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" id="mx0-Pd-68T">
                                 <rect key="frame" x="233" y="6.5" width="71" height="31"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="15"/>
                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                 <state key="normal" title="More Info"/>
                                 <connections>
@@ -280,17 +269,11 @@
                                 <subviews>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Место Работы" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="g3X-7P-b3m">
                                         <rect key="frame" x="0.0" y="0.0" width="158" height="34"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="100" id="u2R-p6-ymq"/>
-                                        </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Позиция" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="fcF-gs-4NC">
                                         <rect key="frame" x="0.0" y="48" width="158" height="34"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="100" id="EFi-rg-a8s"/>
-                                        </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
@@ -336,6 +319,7 @@
                     <toolbarItems/>
                     <navigationItem key="navigationItem" id="kkz-zQ-bPI"/>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="yLB-If-0fP">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
